--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,6 +6,7 @@ $baseLineHeight: 24px;
 @import "mixins";
 @import "guests";
 @import "home";
+@import "gifts";
 
 @include font-face(Lavanderia, asset_path('lavanderia-regular', font));
 @include font-face(Lavanderia, asset_path('lavanderia-sturdy', font), bold);
@@ -107,4 +108,33 @@ img.right{
 .popover, .popover-title{
   font-size: 14px;
   font-weight: normal;
+}
+.btn-link,
+.btn-link:active,
+.btn-link[disabled] {
+  background-color: transparent;
+  background-image: none;
+  -webkit-box-shadow: none;
+     -moz-box-shadow: none;
+          box-shadow: none;
+}
+
+.btn-link {
+  color: #0088cc;
+  cursor: pointer;
+  border-color: transparent;
+  -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+          border-radius: 0;
+}
+
+.btn-link:hover {
+  color: #005580;
+  text-decoration: underline;
+  background-color: transparent;
+}
+
+.btn-link[disabled]:hover {
+  color: #333333;
+  text-decoration: none;
 }
