--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,17 @@
     </section>
   <% end %>
 
+  <% if flash[:warning] %>
+    <section class="row-fluid">
+      <div class="span12 center">
+        <div class="alert">
+          <button type="button" class="close" data-dismiss="alert">×</button>
+          <%= flash[:warning] %>
+        </div>
+      </div>
+    </section>
+  <% end %>
+
   <div class="row">
     <div class="span12">
       <%= yield %>
