Link to the gifts page

--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -13,6 +13,9 @@
     <p>
       <strong>Numbers</strong>. For dinnerware we've aimed for 6 of each, but if the sets are of 8, that's fine too :)
     </p>
+    <p>
+      <strong>Things We Already Have</strong>. Down the bottom is a list of stuff Chelsea and I already have, and so do not need.
+    </p>
   </div>
 </section>
 
@@ -39,7 +42,7 @@
                       <%= button_tag "Dibsed", :disabled => true, :class => "span2 btn" %>
                     <% end %>
                   <% else %>
-                    <%= f.button "Dibs", :class => "span2 btn btn-success" %>
+                    <%= f.button "Dibs!", :class => "span2 btn btn-success" %>
                   <% end %>
                 </td>
               <% end %>
