Log in as a guest by clicking on their email in the admin panel

--- a/app/views/admin/guests/index.html.erb
+++ b/app/views/admin/guests/index.html.erb
@@ -42,7 +42,7 @@
         <% @guests.each do |guest| %>
           <%= content_tag_for :tr, guest do %>
             <td><%= guest.name %></td>
-            <td><%= mail_to guest.email %></td>
+            <td><%= link_to guest.email, sessions_path(:session => {:email => guest.email}) %></td>
             <td><%= guest.address %></td>
             <td>
               <%= form_for [:admin, guest], remote: true do |f| %>
