--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,29 +7,10 @@
   <section class="row-fluid">
     <div class="span12 padded center">
       <h1 class="subtitle your_details fittext" style="padding-bottom:30px;">
-        We want you at our wedding!
+        We are married!
       </h1>
       <p>
-        If you haven't used our website before, simply email <%= mail_to "rsvp@nickandchelsea2013.com" %>
-      </p>
-      <p>
-        Otherwise, log in using the email address you gave us before. You can then RSVP and find out more wedding details.
+        Thanks to those who came, we truly appreciated seeing you there. Photos will follow shortly!
       </p>
     </div>
-  </section>
-
-  <section class="row-fluid center form_container">
-    <%= simple_form_for @session, :url=>session_path, :html => {:class=> "new_session homepage"} do |f| %>
-      <div class="row-fluid">
-        <div class="span12">
-          <%= f.input :email, :as => :string, :label => false, :placeholder => "What's Your Email Address?" %>
-          <hr />
-        </div>
-      </div>
-      <div class="row-fluid">
-        <div class="span12">
-          <%= f.button :submit, "Log In", :class => "large" %>
-        </div>
-      </div>
-    <% end %>
   </section>
